2004-10-29  Paolo Bonzini  <bonzini@gnu.org>

	* regstudy.c (set_start_bits, set_boyer_moore): Do several
	cleanups, including removing unused variables/labels, and
	turning while loops to do/whiles if it can be done safely.
	* regcomp.c: Do not use register.
	* regperl.c: Do not use register.
	* regposix.c: Do not use register.  Simplify code to not
	test for unused opcodes (OP_COND, OP_ASSERT, etc.).

2004-10-29  Paolo Bonzini  <bonzini@gnu.org>

	* regstudy.c (prune_bracket): Distinguish correctly the
	character class at the beginning vs. at the ending of a
	subexpression.  Be more precise in the presence of alternatives
	and optional subexpressions.

2004-10-29  Paolo Bonzini  <bonzini@gnu.org>

	* internal.h: fix formatting.

2004-03-04  Paolo Bonzini  <bonzini@gnu.org>

	* regcomp.c: fix bugs in is_endline.

2004-02-29  Paolo Bonzini  <bonzini@gnu.org>

	* regperl.c, regposix.c: move common functions...
	* regcomp.c: ... here.

2004-02-29  Paolo Bonzini  <bonzini@gnu.org>

	* internal.h: add OP_ANCHOR_MATCH, ESC_G.
	* regdebug.c: Likewise.
	* regexec.c: Likewise.
	* regperl.c: Likewise.
	* regposix.c: Likewise.
	* regstudy.c: Likewise.

2004-01-15  Paolo Bonzini  <bonzini@gnu.org>

	* regexp.c: drop regexec2, replace with REG_STARTEND
	found in NetBSD regexp.
	* regexp.h: likewise.

2003-09-19  Paolo Bonzini  <bonzini@gnu.org>

	* regposix.c: recognize \s and \S.

	* regposix.c: compile (a){0,2} to (a)?(a)? instead
	of ((a)?(a))? so that it is possible to...
	* regexec.c: not assign offsets to optional brackets
	which match nothing, e.g. when matching (b?){1,2} to
	`b'.  Actually, we do assign offsets the first time;
	this does not hamper the POSIXicity of ssed because
	anyway we don't get the wrong substitution for the
	backreference on the RHS: e.g. if you have
	s/(b?)?/<\1>/ with an empty pattern space, you'll get
	<> in the pattern space no matter if \1 did not match
	or if it matched the empty string at offsets [0,0).
